--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,14 @@
-.index-title {
-  font-size: 100px;
+.admin-list{
+    width: 320px;
+}
+.assignment-list-group{
+    & .active{
+        color: $gray-900;
+        background-color: $gray-100;
+        border: 1px solid $gray-400;
+    }
+}
+
+.admin-card{
+    width: calc(100% - 336px);
 }
