--- a/layout/sidebar.ejs
+++ b/layout/sidebar.ejs
@@ -17,7 +17,7 @@
         </li>
         <!-- <a>的class加上 ejs 判斷(三元運算子)，如果 page 為 assignment 的話加入 active 否則加入 link-dark  -->
         <li class="nav-item">
-            <a class="nav-link fw-bold ps-0 <%= page === 'assignment' ? 'active' : 'link-dark' %>" href="./pages/index.html">
+            <a class="nav-link fw-bold ps-0 <%= page === 'assignment' ? 'active' : 'link-dark' %>" href="../../2023-w5/pages/index.html">
                 <span class="material-icons align-middle me-4">assignment</span>
                 Assignment
             </a>
@@ -30,7 +30,7 @@
         </li>
         <!-- <a>的class加上 ejs 判斷(三元運算子)，如果 page 為 admin 的話加入 active 否則加入 link-dark  -->
         <li class="nav-item">          
-            <a class="nav-link fw-bold ps-0 <%= page === 'admin' ? 'active' : 'link-dark' %>" href="./pages/admin.html">
+            <a class="nav-link fw-bold ps-0 <%= page === 'admin' ? 'active' : 'link-dark' %>" href="../../2023-w5/pages/admin.html">
                 <span class="material-icons align-middle me-4">group</span>
                 Admin
             </a>
