--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -25,6 +25,7 @@
 @import './component/pagination.scss';
 @import './component/btn.scss';
 @import './component/avatar.scss';
+@import './component/dropdown.scss';
 
 //  layout
 @import './layout/sidebar.scss';
